--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,10 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "pulgins": {
-      "name": "typescript-pulgin-css-modules"
-    }
+    "jsx": "react-jsx",
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   },
   "extends": "./tsconfig.paths.json",
   "include": [
